# config_manager

./: .gitignore  LICENSE  README.md  pyproject.toml
src/configmanager/: __init__.py  config_manager.py
